# media-explorer

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  .litestar.json  Dockerfile  README.md  app.py  compose.yaml  docker-compose.yml  entrypoint.sh  infra.yaml  main.py  manage.py  models.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  seeds.json  seeds.py  test_welcome.py  vite.config.js  vite.config.ts
accounts/: models.py  views.py
ansible/: create-deploy-key.yml  deploy.yml  inventory.example.yml  mariadb-dev.yml  provision.yml
api/: serializers.py
app/: .env.example  .vite.config.js  Dockerfile  Dockerfile.alt  Dockerfile.old  entrypoint.sh  manage.py  my.cnf.example  my.cnf.test  package-lock.json  package.json  pyproject.toml
app/assets/css/: main.css
app/assets/css/base/: elements.css  headings.css
app/assets/css/components/: button.css  secondary_nav.css
app/assets/css/utilities/: layout.css  spacing.css  typography.css
app/assets/js/: main.js
app/core/: tests.py  views.py
app/core/templates/: base.html  header.html
app/core/templates/core/: accessibility.html  contact.html  legal_notice.html  privacy.html  terms.html  welcome.html
app/explorer/: asgi.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  settings_test.py  urls.py
app/explorer/core/: apps.py  urls.py
app/explorer/core/templates/core/: contact.html  privacy.html  welcome.html
app/explorer/my_account/: apps.py
app/explorer/templates/account/: signup.html
app/locale/de/LC_MESSAGES/: django.po
app/my_account/: models.py
app/my_account/migrations/: 0001_initial.py
app/templates/admin/: base_site.html
app/templates/allauth/elements/: hr.html  p.html
archive/: admin.py  models.py  urls.py  views.py
assets/: main.css  utilities.css
config/: deploy.yml
controllers/: admin.py  api.py  collection.py  organization.py  page_controller.py  resource.py  resource_controller.py  welcome.py
deploy/: docker-compose.infra.yml
entities/: models.py  views.py
envs/: db.example.env  web.example.env
explorer/: _utils.py  config.py  http.py  models.py  settings.py  urls.py  utils.py  wsgi.py
materials/: admin.py  models.py  urls.py  views.py
media_explorer/: dev_settings.py  settings.py  test_settings.py
nginx/: Dockerfile  nginx.conf
proxy/: nginx-staging.conf
resources/: admin.css  chart.ts  main.css  main.ts  types.ts  utilities.css  variables.css
search/: facets.py  indexing.py  query.py  results.py
seeds/: lessons.json  movies.json  seed_db.py  seed_via_api.py
templates/: _logo.svg.jinja  accessibility.html.jinja2  admin.html.jinja  base.html.jinja  base.html.jinja2  collection_detail.html.jinja  collections.html.jinja  contact.html.jinja  contact.html.jinja2  footer.html.jinja  header.html.jinja  legal_notice.html.jinja  organizations.html.jinja  (+8 more)
(+219 files in other folders)
