[project]
name = "explorer"
version = "0.1.15"
description = "Elefant Explorer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django~=5.2",
    "django-allauth~=65.10",
    "django-environ~=0.12",
    "django-vite~=3.1",
    "psycopg~=3.2",
    "gunicorn~=23.0",
    "sentry-sdk[django]~=2.30",
    "whitenoise~=6.9",
    "pillow~=11.2",
    "django-storages[s3]~=1.14",
]

[dependency-groups]
dev = [
    "bpython~=0.25",
    "django-debug-toolbar",
    "django-extensions",
    "pytest-django~=4.11",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "explorer.settings"
