[project]
name = "mediaexplorer-ls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "boto3>=1.41.5",
    "litestar-vite>=0.14.0",
    "litestar[standard,sqlalchemy]>=2.18.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "pytest>=9.0.1",
]
