[project]
name = "mediaexplorer-ls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "boto3>=1.41.5",
    "litestar-vite>=0.14.0",
    "litestar[standard,sqlalchemy]>=2.18.0",
    "requests>=2.32.5",
    "sniffio>=1.3.1",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "pytest>=9.0.1",
]

[tool.ruff.format]
# Like blue, use single quotes for strings.
quote-style = "single"

[pytest]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:use inspect.iscoroutinefunction\(\) instead:DeprecationWarning',
]
